Version 0.3.1 - Dec 26, 2020
----------------------------
- Fix: class Message comply with psr-0 autoloading standard


Version 0.3.0 - Dec 26, 2020
----------------------------
- New: added "jenssegers/agent": "^2.6" dependency for mobile view support
- Eng: class Messages renamed into Message
- Eng: updated README examples


Version 0.2.0 - Dec 23, 2020
----------------------------
- New: added view files
- New: added new class messages
- Enh: changes in README


Version 0.1.0 - Dec 21, 2020
----------------------------
- New: package renamed into apphp/laravel-datagrid
- New: added DataGridServiceProvider


Version 0.0.1 - Dec 20, 2020 (Initial release)
----------------------------
- New: created main structure
